--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Date de naissance:</strong> <span>26 Mai 1993</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Site internet:</strong> <span>https://lullaby460.github.io/Portfolio/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Site internet:</strong> <span><a href="https://lullaby460.github.io/Portfolio/">ici</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Numéro de téléphone:</strong> <span>+33646232651</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ville:</strong> <span>Melun, Ile-de-France, France</span></li>
                 </ul>
