--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Date de naissance:</strong> <span>26 Mai 1993</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Site internet:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Site internet:</strong> <span><a href="https://lullaby460.github.io/Portfolio/">Vous y êtes</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Numéro de téléphone:</strong> <span>+33646232651</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ville:</strong> <span>Melun, Ile-de-France, France</span></li>
                 </ul>
@@ -170,7 +170,8 @@
         </div>
 
       </div>
-    </section> --><!-- End Facts Section -->
+    </section> -->
+    <!-- End Facts Section -->
 
 
     <!-- ======= Skills Section ======= -->
@@ -202,9 +203,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">0%</i></span>
+              <span class="skill">JavaScript <i class="val">20%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -266,10 +267,12 @@
 
             <h3 class="resume-title">Formation</h3>
             <div class="resume-item">
-              <h4>Formation développeur front-end</h4>
+              <h4>Formation développeur JavaScript - React</h4>
               <h5>2021 - Actuel</h5>
               <p><em>OpenClassrooms</em></p>
-              <p>En formation en alternance actuellement chez OpenClassrooms dans le but d'obtenir mon diplôme et en faire mon métier.</p>
+              <p>En formation en alternance actuellement chez OpenClassrooms dans le but d'obtenir mon diplôme et en faire mon métier. <br />
+              <b>La formation initialement front-end à changée de nom pour JavaScript - React récemment mais reste toujours orientée front-end.</b>
+              </p>
             </div>
             <div class="resume-item">
               <h4>BTS - SIO option SLAM</h4>
@@ -285,10 +288,11 @@
               <h5>2019 - 2020</h5>
               <p><em>Lieusaint, Seine-Et-Marne, France</em></p>
               <ul>
-                <li>Assistance tablette pour Engie</li>
+                <li>Assistance tablette pour Engie.</li>
                 <li>Dépannage à distance.</li>
                 <li>Suivi des incidents.</li>
                 <li>Mise en activité des appareils.</li>
+                <li><b>Formation de personnel.</b></li>
               </ul>
             </div>
             <div class="resume-item">
