Mise à jour description

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Développeur front-end.</h3>
             <p class="fst-italic">
-              Passioné par l'informatique depuis tout petit, j'avais décidé de me lancer dedans à l'époque, sans succès. Je réitère l'experience aujourd'hui avec une détermination qui me permettra d'avancer dans ce domaine.
+              Passioné par l'informatique depuis tout petit, j'avais décidé de me lancer dedans à l'époque. Je réitère l'experience aujourd'hui avec une détermination qui me permettra d'avancer dans ce domaine.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -114,9 +114,10 @@
               </div>
             </div>
             <p>
-              À la recherche des arts, de la culture et de la création, l'informatique a tout de suite été un choix de coeur : facile et rapide à prendre en main et une montagne de possibilités.
-              <br /> Mon deuxième choix de coeur est la musique que je pratique depuis plus de 15 ans (20 si on oublie les interruptions). Je me passione également pour la photographie, la botanique et les animaux, ainsi que l'écriture, et le dessin.. 
-              Vous l'aurez compris : tout ce qui touche aux arts créatifs!
+              Je suis une personne vivante, bon public et qui s'intègre très bien en équipe. <br> 
+              Je cherche tout le temps à apprendre et découvrir,
+              en informatique s'en est même un plaisir de tester pour voir comment va réagir mon application et son résultat visuel. <br>
+              Si vous cherchez quelqu'un de passionné et d'actif pour votre équipe vous êtes peut-être la bonne porte!
             </p>
           </div>
         </div>
