--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Développeur front-end.</h3>
             <p class="fst-italic">
-              Passioné par l'informatique depuis tout petit, j'avais décidé de me lancer dedans à l'époque. Je réitère l'experience aujourd'hui avec une détermination qui me permettra d'avancer dans ce domaine.
+              Passioné par l'informatique depuis tout petit, j'avais décidé de me lancer dedans.<br>
+              Je réitère l'experience aujourd'hui avec une détermination qui me permettra d'avancer dans ce domaine.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -114,10 +115,9 @@
               </div>
             </div>
             <p>
-              Je suis une personne vivante, bon public et qui s'intègre très bien en équipe. <br> 
-              Je cherche tout le temps à apprendre et découvrir,
+              Vivant, bon public et qui s'intègre très bien en équipe, je cherche tout le temps à apprendre et découvrir,
               en informatique s'en est même un plaisir de tester pour voir comment va réagir mon application et son résultat visuel. <br>
-              Si vous cherchez quelqu'un de passionné et d'actif pour votre équipe vous êtes peut-être la bonne porte!
+              Vous cherchez quelqu'un de passionné et d'actif pour votre équipe? Vous êtes peut-être la bonne porte!
             </p>
           </div>
         </div>
@@ -181,7 +181,8 @@
 
         <div class="section-title">
           <h2>Compétences</h2>
-          <p>Le début de ma formation m'a permis de mettre à jour mes compétences en html/css et de commencer à apprendre le Sass. Le JavaScript et React constituent les deux languages à apprendre au cours de la formation et qui viendront compléter mes compétences.
+          <p>J'ai pu mettre à jour mes compétences en html/css récemment et de commencer à apprendre le JavaScript. 
+              Ma formation va me permettre de maîtriser le JavaScript et React.
           <br />Le php est un reste de mon BTS que je n'ai pas eu l'occasion d'utiliser mais qui ne concerne pas mon coeur de cible.</p>
         </div>
 
